--- a/package.json
+++ b/package.json
@@ -6,9 +6,29 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.13",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "html-to-text": "^7.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
+    "react-devtools": "^4.21.0",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.1.1",
+    "react-icons": "^4.3.1",
+    "react-quill": "^1.3.5",
+    "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-switch": "^6.0.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.0",
+    "sass": "^1.43.4",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -34,5 +54,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": "http://localhost:2000",
+  "devDependencies": {
+    "@types/styled-components": "^5.1.15"
   }
 }
